[package]
name = "sedona-s2geography"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
bindgen = "0.71.0"
cmake = { version = "0.1" }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
sedona = { path = "../../rust/sedona" }
sedona-testing = { path = "../../rust/sedona-testing" }

[dependencies]
arrow-schema = { workspace = true }
arrow-array = { workspace = true, features = ["ffi"] }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
errno = { version = "0.3" }
rstest = { workspace = true }
sedona-expr = { path = "../../rust/sedona-expr" }
sedona-functions = { path = "../../rust/sedona-functions" }
sedona-schema = { path = "../../rust/sedona-schema" }
thiserror = { workspace = true }
