[package]
name = "sedona-tg"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
bindgen = "0.71.0"
cc = { version = "1" }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
sedona = { path = "../../rust/sedona" }
sedona-testing = { path = "../../rust/sedona-testing", features = ["criterion"] }
wkb = { workspace = true }
geo = { workspace = true }

[dependencies]
arrow-schema = { workspace = true }
arrow-array = { workspace = true, features = ["ffi"] }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
sedona-expr = { path = "../../rust/sedona-expr" }
sedona-functions = { path = "../../rust/sedona-functions" }
sedona-schema = { path = "../../rust/sedona-schema" }
thiserror = { workspace = true }

[[bench]]
harness = false
name = "tg-functions"

[[bench]]
harness = false
name = "parse-wkb"
