[package]
name = "sedonadb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_lib"
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]

[dependencies]
adbc_core = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-ffi = { workspace = true }
futures = { workspace = true }
pyo3 = "0.24.0"
sedona = { path = "../../rust/sedona" }
sedona-adbc = { path = "../../rust/sedona-adbc" }
sedona-schema = { path = "../../rust/sedona-schema" }
sedona-tg = { path = "../../c/sedona-tg" }
thiserror = { workspace = true }
tokio = { workspace = true }
mimalloc = { workspace = true, optional = true }
libmimalloc-sys = { workspace = true, optional = true }
