[package]
name = "sedona-functions"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
sedona-testing = { path = "../sedona-testing" }

[dependencies]
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
geo-traits = { workspace = true }
geo-traits-ext = { workspace = true }
geo-types = { workspace = true }
geo-generic-alg = { workspace = true }
sedona-expr = { path = "../sedona-expr" }
sedona-schema = { path = "../sedona-schema" }
wkb = { workspace = true }
wkt = { workspace = true }

[[bench]]
harness = false
name = "constructors"

[[bench]]
harness = false
name = "exporters"
