[package]
name = "sedona-functions"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dev-dependencies]
arrow-json = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
sedona-testing = { path = "../sedona-testing", features = ["criterion"] }
datafusion = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dependencies]
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
geo-traits = { workspace = true }
sedona-common = { path = "../sedona-common" }
sedona-expr = { path = "../sedona-expr" }
sedona-geometry = { path = "../sedona-geometry" }
sedona-schema = { path = "../sedona-schema" }
wkb = { workspace = true }
wkt = { workspace = true }
serde_json = { workspace = true }

[[bench]]
harness = false
name = "native-functions"
