# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-geo-traits-ext"
version = "0.2.0"
authors = ["Apache Sedona <dev@sedona.apache.org>"]
license = "Apache-2.0"
homepage = "https://github.com/apache/sedona-db"
repository = "https://github.com/apache/sedona-db"
description = "geo-traits extended for implementing generic algorithms"
readme = "README.md"
edition = "2021"

[workspace]

[dependencies]
geo-traits = "0.3.0"
geo-types = "0.7.17"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
wkb = "0.9.1"
byteorder = "1"

[dev-dependencies]
wkt = "0.14.0"
rstest = "0.24.0"

[patch.crates-io]
wkb = { git = "https://github.com/georust/wkb.git", rev = "130eb0c2b343bc9299aeafba6d34c2a6e53f3b6a" }
