[package]
name = "sedona-geo"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
sedona-testing = { path = "../sedona-testing" }
wkt = { workspace = true }

[dependencies]
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
geo-generic-alg = { workspace = true }
geo-traits = { workspace = true, features = ["geo-types"] }
geo-traits-ext = { workspace = true }
geo-types = { workspace = true }
sedona-expr = { path = "../sedona-expr" }
sedona-functions = { path = "../sedona-functions" }
sedona-schema = { path = "../sedona-schema" }
wkb = { workspace = true }

[[bench]]
harness = false
name = "geo-predicates"

[[bench]]
name = "geo-functions"
harness = false
