[package]
name = "sedona-geometry"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
wkt = { workspace = true }

[dependencies]
geo-traits = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
wkb = { workspace = true }
