[package]
name = "sedona-geoparquet"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[features]
default = []

[dev-dependencies]
sedona-testing = { path = "../sedona-testing" }
url = { workspace = true }

[dependencies]
async-trait = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
geo-traits = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
sedona-common = { path = "../sedona-common" }
sedona-expr = { path = "../sedona-expr" }
sedona-geometry = { path = "../sedona-geometry" }
sedona-schema = { path = "../sedona-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
