# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sedona-pointcloud"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
async-stream = "0.3.6"
async-trait = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-pruning = { workspace = true }
futures = { workspace = true }
geoarrow-array = { version = "0.7.0" }
geoarrow-schema = { version = "0.7.0" }
las = { version = "0.9.10", features = ["laz"] }
las-crs = { version = "1.0.0" }
laz = "0.12.0"
object_store = { workspace = true }
rayon = "1.11.0"
sedona-expr = { workspace = true }
sedona-geometry = { workspace = true }

[dev-dependencies]
datafusion = { workspace = true, features = ["sql"] }
sedona = { workspace = true, features = ["pointcloud"] }
tempfile = { workspace = true }
tokio = { workspace = true }
