# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-spatial-join-gpu"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "GPU-accelerated spatial join for Apache SedonaDB"
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[features]
default = []
# Enable GPU acceleration (requires CUDA toolkit and sedona-libgpuspatial with gpu feature)
gpu = ["sedona-libgpuspatial/gpu"]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-common-runtime = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sysinfo = "0.30"

# Parquet and object store for direct file reading
parquet = { workspace = true }
object_store = { workspace = true }

# GPU dependencies
sedona-libgpuspatial = { workspace = true }
sedona-geo = { workspace = true }

# Sedona dependencies
sedona-common = { workspace = true }
sedona-expr = { workspace = true }
sedona-functions = { workspace = true }
sedona-geometry = { workspace = true }
sedona-schema = { workspace = true }
wkb = { workspace = true }
geo = { workspace = true }
sedona-geo-generic-alg = { workspace = true }
geo-traits = { workspace = true, features = ["geo-types"] }
sedona-geo-traits-ext = { workspace = true }
geo-types = { workspace = true }
geo-index = { workspace = true }
float_next_after = { workspace = true }
log = "0.4"
fastrand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }

sedona-testing = { workspace = true }
sedona-geos = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }


[[bench]]
name = "gpu_spatial_join"
harness = false
required-features = ["gpu"]
